Add test suite and fix security issues
Major changes:
- Added comprehensive test suite with 60+ test cases covering CLI, generate, UI, and benchmark modules
- Fixed security vulnerability: changed server binding from 0.0.0.0 to 127.0.0.1 in web UIs
- Fixed filename sanitization bug using regex to handle unicode and special characters properly
- Updated README with clearer Hugging Face model download instructions in Quick Start
- Updated .gitignore with log files, temp files, IDE files, and test coverage artifacts
- Added pytest and pytest-cov as optional dev dependencies

Tests cover:
- Image saving with filename sanitization
- Memory formatting and display utilities
- Device detection (MPS, CUDA, CPU)
- Mock-based unit tests for all modules (no model loading required)
- Edge cases and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,31 @@ wheels/
 
 # Virtual environments
 .venv
+venv/
 
 # Generated images
 *.png
 benchmark/*.png
+
+# Log files
+*.log
+
+# Environment variables
+.env
+.env.local
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*~
+.DS_Store
+
+# Test coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Temporary files
+tmp/
+temp/
