--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,10 @@ dependencies = [
     "torchvision>=0.24.1",
     "transformers>=4.57.3",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+]
+
